<resources>
    <string name="app_name">Healwire</string>
    <string name="Whatwedo">We try to provide medicine at cheapest price and at the right time</string>
     <string name="Aboutus">Healwire offer a wide selection of genuine medicines based on prescriptions placed by the customers.
         Our prime motive is to be the first choice for wellness and health needs by customarily understanding and exceeding customers expectations</string>

     <string name="details">Adults: 0.5-1 gm 4-6 hourly as necessary. Max: 4 gm daily.
  Children: Neonate 28-32 week post menstrual age: 20 mg/kg as a single dose then 10-15 mg/kg 8-12 hourly (max 30 mg/kg daily in divided doses); neonate >32 week post menstrual age:
  20 mg/kg as a single dose then 10-15 mg/kg 6-8 hourly (max 60 mg/kg daily in divided doses); children 1-3 month: 30 mg 8 hourly (max 60 mg/kg daily in divided doses); 3 month-1 year:
  60-120 mg 4-6 hourly (max 4 doses in 24 hour); 1-5 year: 120-250 mg 4-6 hourly (max 4 doses in 24 hour); 6-12 years: 250-500 mg 4-6 hourly (max 4 doses in 24 hour).
  Children: Neonate 28-32 week postmenstrual age: 20 mg/kg as a single doses then 15 mg/kg 12 hourly as necessary (max 30 mg/kg daily in divided doses); neonate >32 week postmenstrual
  age: 30 mg/kg as a single dose then 20 mg/kg 8 hourly as necessary (max 60 mg/kg daily in divided doses); 1-3 month: 30-60 mg 8 hourly (max 60 mg/kg daily in divided doses); 3-12 month:
  60-125 mg 4-6 hourly (max 4 doses in 24 hour); 1-5 year: 125-250 mg 4-6 hourly (max 4 doses in 24 hour); 6-12 year: 250-500 mg 4-6 hourly (max 4 doses in 24 hour; >12 year:
  500 mg 4-6 hourly (max 4gm daily).</string>




    <string-array name="countries_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
    </string-array>


    <string-array name="menu_item_array">

        <item>Home</item>
        <item>Profile</item>
        <item>My Prescription</item>
        <item>My Orders</item>
        <item>Items in Cart</item>
        <item>About</item>
        <item>Exit</item>

    </string-array>


    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>


    <string name="rs">\u20A8</string>
    <string name="Rs">\u20B9</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="string_welcome_to_healwire">Welcome to Healwire</string>
    <string name="login_healwire">Login to Healwire</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="to_register">to Register</string>
    <string name="new_to_healwire">New to Healwire?</string>
    <string name="click_here">Click here</string>
    <string name="info">info@healwire.com</string>
    <string name="contact_num">+91-8129563552</string>
    <string name="address">Healwire,webandcrafts,Thrissur</string>
    <string name="forgot_passwod">Forgot Passwod</string>
    <string name="my_orders">My Orders</string>


</resources>
